--- a/frontend-chat/style.css
+++ b/frontend-chat/style.css
@@ -4,16 +4,40 @@ body {
     align-items: center;
     padding-top: 150px;
     background-image: url(assets/background-2.jpg);
-    background-size: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    font-size: 19px;
+    font-family: Helvetica, Arial;
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    padding: 150px 100px 150px 100px;
-    align-items: center;
-    width: 300px;
-    height: 300px;
-    background-color: rgba(255, 255, 255, 1);
+    padding: 50px 100px 150px 50px;
+    width: 400px;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.7);
     border-radius: 10px;
+}
+
+input {
+    font-family: Helvetica, Arial;
+    width: 400px;
+    padding: 10px;
+    position: absolute;
+    margin-top: 200px;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.display div {
+    padding-bottom: 10px;
+}
+
+.display div:nth-child(odd) {
+    font-weight: 700;
+}
+
+.display div:nth-child(even) {
+    padding-bottom: 30px;
 }
